Se agrega rango de administrador. Se cambia lógica en endpoints de reservas. Se agregan nuevos endpoints de reservas. Se modifica swagger.json con nuevos endpoints.
